@@ -59,14 +59,12 @@ ahc_echo (void *cls,
   if (&ptr != *unused)
     {
       *unused = &ptr;
-      fprintf (stderr, "received %s\n", method);
       return MHD_YES;
     }
   *unused = NULL;
   response = MHD_create_response_from_data (strlen (url),
                                             (void *) url, MHD_NO, MHD_YES);
   ret = MHD_queue_response (connection, MHD_HTTP_OK, response);
-  fprintf (stderr, "sending reply\n");
   MHD_destroy_response (response);
   if (ret == MHD_NO)
     abort ();
