@@ -1,3 +1,7 @@
+Sun Jul 25 11:10:45 CEST 2010
+	Changed code to use external libgnutls code instead of
+	the "fork".  Minor API changes for setting TLS options. -CG
+
 Sun Jun 13 10:52:34 CEST 2010
 	Cleaned up example code. -CG
 
